--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,8 @@ services:
         generateValue: true
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: FLASK_ENV
+        value: production
 
 databases:
   - name: civi-connect-db
